# ML_EQUITABLE

./: .gitignore  README.md
XAIguiFormer_Project_Scaffold/: RotaryFrequencyDemographicEncoding.py  Tokenizer.py  TransformerBlock.py  build_graph.py  drofe.ipynb  drofe.py  exemple_test.py  explainer.py  loss.py  tokenizer.ipynb  tokenizer.py  train.py  transformer.ipynb  transformer.py  xaiguided_transformer.py  xaiguiformer_plan.md
XAIguiFormer_Project_Scaffold/data_pipeline/: EEGBenchmarkDataset.py  README.md  preprocess_tdbrain_to_npy.py  pyproject.toml
XAIguiFormer_Project_Scaffold/report/: README.md
