[tool.poetry]
name = "projet-xai"
version = "0.1.0"
description = ""
authors = ["ghaliac <ghalia.chaoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
pandas = "^2.2.3"
mne = "^1.9.0"
mne-connectivity = "^0.7.0"
pyprep = "^0.4.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
mne-icalabel = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
