[tool.poetry]
name = "projet-xai"
version = "0.1.0"
description = ""
authors = ["ghaliac <ghalia.chaoui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.21.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
mne = "1.3.1"
mne-connectivity = "0.5.0"
pyprep = "^0.4.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
mne-icalabel = "^0.4.0"
appnope = "^0.1.4"
asttokens = "^3.0.0"
certifi = "^2025.4.26"
cftime = "^1.6.4.post1"
charset-normalizer = "^3.4.2"
comm = "^0.2.2"
contourpy = "^1.3.2"
cycler = "^0.12.1"
debugpy = "^1.8.14"
decorator = "^5.2.1"
exceptiongroup = "^1.3.0"
executing = "^2.2.0"
filelock = "^3.18.0"
fonttools = "^4.58.0"
fsspec = "^2025.3.2"
idna = "^3.10"
ipykernel = "^6.29.5"
jedi = "^0.19.2"
jinja2 = "^3.1.6"
joblib = "^1.5.0"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
kiwisolver = "^1.4.8"
markupsafe = "^3.0.2"
matplotlib-inline = "^0.1.7"
mpmath = "^1.3.0"
nest-asyncio = "^1.6.0"
netcdf4 = "^1.7.2"
networkx = "^3.4.2"
packaging = "^25.0"
parso = "^0.8.4"
pexpect = "^4.9.0"
pillow = "^11.2.1"
platformdirs = "^4.3.8"
pooch = "^1.8.2"
prompt-toolkit = "^3.0.51"
psutil = "^7.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pygments = "^2.19.1"
pyparsing = "^3.2.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
pyzmq = "^26.4.0"
requests = "^2.32.3"
scipy = "^1.15.3"
six = "^1.17.0"
stack-data = "^0.6.3"
sympy = "^1.14.0"
threadpoolctl = "^3.6.0"
torch = "^2.7.0"
tornado = "^6.4.2"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
typing-extensions = "^4.13.2"
tzdata = "^2025.2"
urllib3 = "^2.4.0"
wcwidth = "^0.2.13"
xarray = "^2025.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
